# NFL_play_prediction

./: .gitattributes  .gitignore  README.md  drop_columns.json  encoding_normalization.json  featureMap.txt  insertion.txt  mannheim_meerkats.ipynb  model.ipynb  modelNew.ipynb  outlier.py  preprocessing.py  preprocessing_documentation.ipynb  pyproject.toml  roof_insertion.json
