[tool.poetry]
name = "nfl-play-prediction"
version = "0.1.0"
description = ""
authors = ["Thilo <thilo.viktorin@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.2"
plotly = "^5.18.0"
scikit-learn = "^1.3.2"
ipykernel = "^6.26.0"
nbformat = "^5.9.2"
ipython = "^8.17.2"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
